# book-scrap

./: .gitignore  pyproject.toml
book_scrap_dbt/: dbt_project.yml
book_scrap_dbt/models/marts/: dim_prod_cat1.sql
book_scrap_dbt/models/staging/: source.yml  stg_prod_cat1.sql  stg_prod_cat2.sql  stg_prod_details.sql  stg_prod_type.sql  stg_product_details.sql
data/: naiin_inventory.duckdb.wal
ingestion/: get_product_category.ipynb  scrap.py  scrap_data.ipynb  test_db_connect.py  test_scrap_data.ipynb
