[project]
name = "book-scrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.5.0",
    "ipykernel>=7.2.0",
    "lxml>=6.0.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]
